--- a/09-calendar-app/package.json
+++ b/09-calendar-app/package.json
@@ -1,54 +1,28 @@
 {
-  "name": "calendar-app",
-  "version": "0.1.0",
+  "name": "calendar",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "enzyme-to-json": "^3.6.2",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-big-calendar": "^0.38.5",
-    "react-datetime-picker": "^3.4.3",
-    "react-dom": "^17.0.2",
-    "react-modal": "^3.14.4",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "sweetalert2": "^11.3.6",
-    "web-vitals": "^2.1.3"
-  },
+  "version": "0.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
+    "date-fns": "^2.28.0",
+    "react": "^18.0.0",
+    "react-big-calendar": "^0.40.1",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "6",
+    "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-    "enzyme": "^3.11.0",
-    "jest-canvas-mock": "^2.3.1",
-    "redux-mock-store": "^1.5.4"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite": "^2.9.9"
   }
 }
